Bug Fixed- Strenth Text Not Visible

--- a/Password-Generator/style.css
+++ b/Password-Generator/style.css
@@ -128,7 +128,7 @@ h1{
     margin-bottom: 2rem;
 }
 
-.strength p{
+.strength span{
     color:var(--pl-white);
     font-size: 1.5rem;
 }
